feat: add AuthTokenRequest route
