# src/routes/authentication.ts
@@ -1,4 +1,5 @@
 import { Context, Document } from "openapi-backend";
+import { jsonResponseHeaders } from "../utils/default-headers";
 
 export const LoginRequest = async (c: Context<Document>) => {
   return {
@@ -15,5 +16,13 @@ export const AuthenticateResponse = async (c: Context<Document>) => {
     headers: {
       location: "https://example.com",
     },
+  };
+};
+
+export const AuthTokenRequest = async (c: Context<Document>) => {
+  return {
+    statusCode: 200,
+    headers: jsonResponseHeaders,
+    body: JSON.stringify({ token: "token" }),
   };
 };
